--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
+    "server": "nodemon app.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.11.9",
     "next": "latest",
+    "nodemon": "^2.0.6",
     "postcss": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
