--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "with-mongodb",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
-    "server": "nodemon app.js",
+    "dev": "node app.js",
     "build": "next build",
-    "start": "next start"
+    "start": "cross-env NODE_ENV=production node app.js"
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
@@ -18,6 +17,7 @@
     "postcss": "^8.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "recaptcha2": "^1.3.3",
     "sass": "^1.30.0"
   },
   "license": "MIT"
